<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_student_info">StudentInfoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="image">image</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="datum_rodenja">Datum rodenja</string>
    <string name="unesi_datum">Unesi datum</string>
    <string name="dalje">Dalje</string>
    <string name="predmet">Predmet</string>
    <string name="profesor">Profesor</string>
    <string name="trenutna_godina">Trenutna godina</string>
    <string name="broj_sati_predavanja">Broj sati predavanja</string>
    <string name="broj_sati_lv_a">Broj sati LV-a</string>
    <string name="personal_info">Personal info</string>
    <string name="datum">Datum</string>
    <string name="student_info">Student info</string>
    <string name="akademska_godina">Akademska godina</string>
    <string name="sati_predavanja">Sati predavanja</string>
    <string name="sati_lv_a">Sati LV-a</string>
    <string name="pocetak">Pocetak</string>
</resources>